--- a/registro.html
+++ b/registro.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/estilos.css">
+    <title>Registro</title>
 </head>
+
 <body>
     <button type="button" onclick="window.location.href='index.html'">regresar</button>
 </body>
+
 </html>
