--- a/registro.html
+++ b/registro.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <button type="button" onclick="window.location.href='index.html'">regresar</button>
+    <button type="button" onclick="window.location.href='Inicio.html'">regresar</button>
 </body>
 
 </html>
