--- a/OtrasPaginas.html
+++ b/OtrasPaginas.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <button type="button" onclick="window.location.href='Inicio.html'">regresar</button>
     <div class="container">
         <div class="row">
             <div class="col-12">
