Actualización de estilos, validaciones y nuevas páginas

--- a/administrador.html
+++ b/administrador.html
@@ -1,20 +1,13 @@
 <!DOCTYPE html>
-<html lang="es">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Software Barbería</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Administrador</title>
     <link rel="stylesheet" href="css/estilos.css">
-
 </head>
-
 <body>
     <button type="button" onclick="window.location.href='Inicio.html'">Inicio</button>
-    
-    <div style="width: 100%;">
-        <h1 class="texto_pagina">sosmo una barberia dedicada</h1>
-      </div>
-          
+    <p><h1>Bienvenido a la pagina de administrador</h1> </p>
 </body>
-
 </html>
