--- a/OtrasPaginas.html
+++ b/OtrasPaginas.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1>Bienvenido</h1>
+                <h1>Bienvenido a otras paginas</h1>
             </div>
         </div>
     </div>
