Actualización de estilos, validaciones y nuevas páginas

--- a/SobreNosotros.html
+++ b/SobreNosotros.html
@@ -12,7 +12,7 @@
     <button type="button" onclick="window.location.href='Inicio.html'">Inicio</button>
     
     <div style="width: 100%;">
-        <h1 class="texto_pagina">sosmo una barberia dedicada</h1>
+        <h1 class="texto_pagina">somos una barberia dedicada</h1>
       </div>
           
 </body>
