Descripción breve del cambio realizado

--- a/registro.html
+++ b/registro.html
@@ -6,7 +6,7 @@
     <title>Registro de Cliente</title>
     <link rel="stylesheet" href="css/estilos.css">
 </head>
-<body>
+<body class="registro">
     <div class="logo">
         <img src="img/logobarberia.jpg" alt="">
     </div>
