--- a/registro.html
+++ b/registro.html
@@ -14,22 +14,22 @@
         <form action="#" method="post"> 
             <h3>Registro de Cliente</h3>
 
-            <label for="Nombre">Nombre:</label>
+            <label for="Nombre"></label>
             <input type="text" id="Nombre" name="Nombre" placeholder="Nombre" required>
 
-            <label for="Apellido">Apellido:</label>
+            <label for="Apellido"></label>
             <input type="text" id="Apellido" name="Apellido" placeholder="Apellido" required>
 
-            <label for="segundo_apellido">Segundo Apellido:</label>
+            <label for="segundo_apellido"></label>
             <input type="text" id="segundo_apellido" name="segundo_apellido" placeholder="Segundo Apellido">
 
-            <label for="gmail">Correo Electrónico:</label>
+            <label for="gmail"></label>
             <input type="email" id="gmail" name="gmail" placeholder="Correo electrónico" required>
 
-            <label for="telefono">Número de Teléfono:</label>
+            <label for="telefono"></label>
             <input type="tel" id="telefono" name="telefono" pattern="[0-9]{10}" maxlength="10" placeholder="Número de Teléfono" required>
 
-            <label for="tipo_documento">Tipo de Documento:</label>
+            <label for="tipo_documento"></label>
             <select name="tipo_documento" id="tipo_documento" required>
                 <option value="">Selecciona una opción</option>
                 <option value="CC">Cédula de Ciudadanía</option>
@@ -38,13 +38,13 @@
                 <option value="PAS">Pasaporte</option>
             </select>
 
-            <label for="numero_documento">Número de Documento:</label>
+            <label for="numero_documento"></label>
             <input type="text" id="numero_documento" name="numero_documento" placeholder="Número de documento" required>
 
-            <label for="fechaNacimiento">Fecha de Nacimiento:</label>
+            <label for="fechaNacimiento"></label>
             <input type="date" id="fechaNacimiento" name="fechaNacimiento" required>
 
-            <label for="sexo">Sexo:</label>
+            <label for="sexo"></label>
             <select name="sexo" id="sexo" required>
                 <option value="" disabled selected>Selecciona una opción</option>
                 <option value="Masculino">Masculino</option>
@@ -52,10 +52,10 @@
                 <option value="Otro">Otro</option>
             </select>
 
-            <label for="password">Contraseña:</label>
+            <label for="password"></label>
             <input type="password" id="password" name="password" placeholder="Contraseña" required>
 
-            <label for="confirmPassword">Confirmar Contraseña:</label>
+            <label for="confirmPassword"></label>
             <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirmar Contraseña" required>
 
             <button onclick="window.location.href='registro.html'">Registrarse</button>
