Actualizo estilos y nuevas páginas en el proyecto

--- a/Barberos.html
+++ b/Barberos.html
@@ -11,11 +11,13 @@
 <body class="SobreNosotros">
     <div class="menu">
         <button class="menu-btn" onclick="window.location.href='inicio.html'">Inicio</button>
+        <button class="menu-btn" onclick="window.location.href='Agenda.html'">Ir a Agenda</button>
     </div>
 
     <div class="texto_pagina">
-        <h1 >HISTORIA</h1>
-        <p >Somos una barbería que inició sus labores en el año 2014...</p>
+        <h1 >Bienvenido a lapagina de Brberos</h1>
     </div>
+    
+    <script src="validaciones.js"></script> <!-- Conectar con JavaScript -->
 </body>
 </html>
