--- a/Clientes.html
+++ b/Clientes.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Administrador</title>
+    <title>Software Barbería</title>
     <link rel="stylesheet" href="css/estilos.css">
+
 </head>
+
 <body class="SobreNosotros">
     <div class="menu">
         <button class="menu-btn" onclick="window.location.href='inicio.html'">Inicio</button>
     </div>
 
     <div class="texto_pagina">
-        <h1 >bienvenido a la pagina administrador</h1>
+        <h1 >Bienvenido a lapagina de clientes</h1>
     </div>
     <div class="menu">
         <button class="menu-btn" onclick="toggleMenu()">Menú</button>
         <div class="menu-content" id="menuContent">
-            <a href="SobreNosotros.html">infirmacion interna barbería</a>
-            <a href="OtrasPaginas.html">agenda</a>
-        </div>
-        <button class="menu-btn" onclick="window.location.href='inicio.html'">Inicio</button>
-    </div>
+            <a href="">Servicios</a>
+            </div>
+            <button class="menu-btn" onclick="window.location.href='inicio.html'">Inicio</button>
     <script src="validaciones.js"></script> <!-- Conectar con JavaScript -->
 </body>
 </html>
