--- a/OtrasPaginas.html
+++ b/OtrasPaginas.html
@@ -8,14 +8,9 @@
 
 </head>
 
-<body>
-    <button type="button" onclick="window.location.href='Inicio.html'">regresar</button>
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                <h1>Bienvenido a otras paginas</h1>
-            </div>
-        </div>
+<body class="SobreNosotros">
+    <div class="menu">
+        <button class="menu-btn" onclick="window.location.href='inicio.html'">Inicio</button>
     </div>
 </body>
 
