--- a/Agenda.html
+++ b/Agenda.html
@@ -14,8 +14,7 @@
     </div>
 
     <div class="texto_pagina">
-        <h1 >HISTORIA</h1>
-        <p >Somos una barbería que inició sus labores en el año 2014...</p>
+        <h1 >Bienvenido a la pagina de agenda</h1>
     </div>
 </body>
 </html>
