--- a/inicio.html
+++ b/inicio.html
@@ -2,18 +2,18 @@
 <link rel="stylesheet" href="css/estilos.css">
 </head>
 
-<body>
+<body class="inicio">
 <div class="logo">
     <img src="img/logobarberia.jpg" alt="">
 </div>
-<div class="login-container">
+<div class="login">
     <h2>Iniciar Sesión</h2>
     <form id="loginForm">
         <input type="text" id="username" placeholder="Usuario" required>
         <input type="password" id="password" placeholder="Contraseña" required>
         <p class="error" id="errorMsg"></p>
-        <button onclick="window.location.href='SobreNosotros.html'">Ingresar</button>
-        <button onclick="window.location.href='registro.html'">Registrarse</button>
+        <button onclick="window.location.href=''">Ingresar</button>
+        <button onclick="window.location.href=''">Recuper Contarseña</button>
     </form>
 </div>
 <div class="menu">
@@ -22,6 +22,7 @@
         <a href="SobreNosotros.html">Sobre Nosotros</a>
         <a href="OtrasPaginas.html">Otras Paginas</a>
     </div>
+    <button class="menu-btn" onclick="window.location.href='registro.html'">Registrarse</button>
 </div>
 <script src="validaciones.js"></script> <!-- Conectar con JavaScript -->
 </body>
