--- a/registro.html
+++ b/registro.html
@@ -12,23 +12,15 @@
     </div>
     <div class="login-container">
         <form action="#" method="post"> 
-            <h3>Registro de Cliente</h3>
-
-            <label for="Nombre">Nombre:</label>
-            <input type="text" id="Nombre" name="Nombre" placeholder="Nombre" required>
-
-            <label for="Apellido">Apellido:</label>
-            <input type="text" id="Apellido" name="Apellido" placeholder="Apellido" required>
-
-            <label for="segundo_apellido">Segundo Apellido:</label>
-            <input type="text" id="segundo_apellido" name="segundo_apellido" placeholder="Segundo Apellido">
-
-            <label for="gmail">Correo Electrónico:</label>
+            <h3>Registro de Cliente</h3> 
+            <input type="text" id="Nombre" name="Nombre" placeholder="Primer Nombre" required>  
+            <input type="text" id="Nombre" name="Nombre" placeholder="Segundo Nombre" required>  
+            <input type="text" id="Apellido" name="Apellido" placeholder="Primer Apellido" required>         
+            <input type="text" id="segundo_apellido" name="segundo_apellido" placeholder="Segundo Apellido"> 
+            <label for="fechaNacimiento">Fecha de nacimiento</label>
+            <input type="date" id="fechaNacimiento" name="fechaNacimiento" required>         
             <input type="email" id="gmail" name="gmail" placeholder="Correo electrónico" required>
-
-            <label for="telefono">Número de Teléfono:</label>
             <input type="tel" id="telefono" name="telefono" pattern="[0-9]{10}" maxlength="10" placeholder="Número de Teléfono" required>
-
             <label for="tipo_documento">Tipo de Documento:</label>
             <select name="tipo_documento" id="tipo_documento" required>
                 <option value="">Selecciona una opción</option>
@@ -37,28 +29,19 @@
                 <option value="CE">Cédula de Extranjería</option>
                 <option value="PAS">Pasaporte</option>
             </select>
-
-            <label for="numero_documento">Número de Documento:</label>
             <input type="text" id="numero_documento" name="numero_documento" placeholder="Número de documento" required>
-
-            <label for="fechaNacimiento"></label>
-            <input type="date" id="fechaNacimiento" name="fechaNacimiento" required>
-
-            <label for="sexo"></label>
+            
+            <label for="sexo">Sexo</label>
             <select name="sexo" id="sexo" required>
                 <option value="" disabled selected>Selecciona una opción</option>
                 <option value="Masculino">Masculino</option>
                 <option value="Femenino">Femenino</option>
                 <option value="Otro">Otro</option>
             </select>
-
-            <label for="password">Contraseña:</label>
             <input type="password" id="password" name="password" placeholder="Contraseña" required>
-
-            <label for="confirmPassword">Confirmar Contraseña:</label>
             <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirmar Contraseña" required>
-
             <button onclick="window.location.href='registro.html'">Registrarse</button>
+            <button onclick="window.location.href='Inicio.html'">Actualizar Informacion</button>
             <button onclick="window.location.href='Inicio.html'">Regresar</button>
         </form>
     </div>
