Ajustes en estilos y en inicio.html

--- a/inicio.html
+++ b/inicio.html
@@ -14,6 +14,9 @@
         <p class="error" id="errorMsg"></p>
         <button onclick="window.location.href=''">Ingresar</button>
         <button onclick="window.location.href=''">Recuper Contarseña</button>
+
+        <!--enlace para recuperar contraseña-->
+        <p><a href="recuperar.hrml" class="recuperar-link">¿Olvidaste tu contraseña?</a></p>
     </form>
 </div>
 <div class="menu">
