--- a/SobreNosotros.html
+++ b/SobreNosotros.html
@@ -15,8 +15,7 @@
 
     <div class="texto_pagina">
         <h1 >HISTORIA</h1>
-        <p >Somos una barbería que inició sus labores en el año 2014 la cual fue creada para satisfacer las 
-            necesidades de cada cliente.
+        <p >Somos una barbería que inició sus labores en el año 2014....
         </p>
     </div>
 </body>
