--- a/administrador.html
+++ b/administrador.html
@@ -21,7 +21,10 @@
             <a href="OtrasPaginas.html">agenda</a>
         </div>
         <button class="menu-btn" onclick="window.location.href='inicio.html'">Inicio</button>
-    </div>
+    </div> 
+     </div>
+        <button class="menu-btn" onclick="window.location.href='inicio.html'">Prueba</button>
+    </div> 
     <script src="validaciones.js"></script> <!-- Conectar con JavaScript -->
 </body>
 </html>
