--- a/inicio.html
+++ b/inicio.html
@@ -1,5 +1,10 @@
-<title>Software Barbería</title>
-<link rel="stylesheet" href="css/estilos.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>inicio</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 
 <body class="inicio">
