--- a/registro.html
+++ b/registro.html
@@ -11,16 +11,16 @@
         <img src="img/logobarberia.jpg" alt="">
     </div>
     <div class="login-container">
-        <form action="#" method="post"> 
+       <form action="insertar.php" method="post">
             <h3>Registro de Cliente</h3> 
-            <input type="text" id="Nombre" name="Nombre" placeholder="Primer Nombre" required>  
-            <input type="text" id="Nombre" name="Nombre" placeholder="Segundo Nombre" required>  
-            <input type="text" id="Apellido" name="Apellido" placeholder="Primer Apellido" required>         
-            <input type="text" id="segundo_apellido" name="segundo_apellido" placeholder="Segundo Apellido"> 
+            <input type="text" id="Primer_nombre" name="Primer_nombre" placeholder="Primer Nombre" required>  
+            <input type="text" id="Segundo_nombre" name="Segundo_nombre" placeholder="Segundo Nombre" required>  
+            <input type="text" id="Primer_apellido" name="Primer_apellido" placeholder="Primer Apellido" required>         
+            <input type="text" id="Segundo_apellido" name="Segundo_apellido" placeholder="Segundo Apellido"> 
             <label for="fechaNacimiento">Fecha de nacimiento</label>
-            <input type="date" id="fechaNacimiento" name="fechaNacimiento" required>         
-            <input type="email" id="gmail" name="gmail" placeholder="Correo electrónico" required>
-            <input type="tel" id="telefono" name="telefono" pattern="[0-9]{10}" maxlength="10" placeholder="Número de Teléfono" required>
+            <input type="date" id="Fecha_Nacimiento" name="Fecha_Nacimiento" required>         
+            <input type="email" id="Correo" name="Correo" placeholder="Correo electrónico" required>
+            <input type="tel" id="Telefono" name="Telefono" pattern="[0-9]{10}" maxlength="10" placeholder="Número de Teléfono" required>
             <label for="tipo_documento">Tipo de Documento:</label>
             <select name="tipo_documento" id="tipo_documento" required>
                 <option value="">Selecciona una opción</option>
@@ -29,7 +29,7 @@
                 <option value="CE">Cédula de Extranjería</option>
                 <option value="PAS">Pasaporte</option>
             </select>
-            <input type="text" id="numero_documento" name="numero_documento" placeholder="Número de documento" required>
+            <input type="text" id="Numero_documento" name="Numero_documento" placeholder="Número de documento" required>
             
             <label for="sexo">Sexo</label>
             <select name="sexo" id="sexo" required>
@@ -39,11 +39,10 @@
                 <option value="Otro">Otro</option>
             </select>
             <input type="password" id="password" name="password" placeholder="Contraseña" required>
-            <input type="password" id="confirmPassword" name="confirmPassword" placeholder="Confirmar Contraseña" required>
-            <button onclick="window.location.href='registro.html'">Registrarse</button>
-            <button onclick="window.location.href='Inicio.html'">Actualizar Informacion</button>
-            <button onclick="window.location.href='Inicio.html'">Regresar</button>
+            <button type="submit">Registrarse</button>
         </form>
+        <button onclick="window.location.href='Inicio.html'">Actualizar Informacion</button>
+            <button onclick="window.location.href='Inicio.html'">Regresar</button>
     </div>
 </body>
 </html>
