--- a/registro.html
+++ b/registro.html
@@ -11,7 +11,7 @@
         <img src="img/logobarberia.jpg" alt="">
     </div>
     <div class="login-container">
-       <form action="insertar.php" method="post">
+       <form action="" method="post">
             <h3>Registro de Cliente</h3> 
             <input type="text" id="Primer_nombre" name="Primer_nombre" placeholder="Primer Nombre" required>  
             <input type="text" id="Segundo_nombre" name="Segundo_nombre" placeholder="Segundo Nombre" required>  
