nuevos cambios agregados

--- a/inicio.html
+++ b/inicio.html
@@ -19,7 +19,7 @@
         <p class="error" id="errorMsg"></p>
         <button onclick="window.location.href=''">Ingresar</button>
         <!--enlace para recuperar contraseña-->
-        <p><a href="recuperar.hrml" class="recuperar-link">¿Olvidaste tu contraseña?</a></p>
+        <p><a href="recuperar.html" class="recuperar-link">¿Olvidaste tu contraseña?</a></p>
     </form>
 </div>
 <div class="menu">
