--- a/registro.html
+++ b/registro.html
@@ -12,7 +12,7 @@
     </div>
     <div class="login-container">
        <form action="" method="post">
-            <h3>Registro de Cliente</h3> 
+            <h3>Registro de personas</h3> 
             <input type="text" id="Primer_nombre" name="Primer_nombre" placeholder="Primer Nombre" required>  
             <input type="text" id="Segundo_nombre" name="Segundo_nombre" placeholder="Segundo Nombre" required>  
             <input type="text" id="Primer_apellido" name="Primer_apellido" placeholder="Primer Apellido" required>         
