--- a/registro.html
+++ b/registro.html
@@ -11,7 +11,7 @@
         <img src="img/logobarberia.jpg" alt="">
     </div>
     <div class="login-container">
-       <form action="" method="post">
+       <form action="php/registro_personas.php" method="post">
             <h3>Registro de personas</h3> 
             <input type="text" id="Primer_nombre" name="Primer_nombre" placeholder="Primer Nombre" required>  
             <input type="text" id="Segundo_nombre" name="Segundo_nombre" placeholder="Segundo Nombre" required>  
@@ -22,7 +22,7 @@
             <input type="email" id="Correo" name="Correo" placeholder="Correo electrónico" required>
             <input type="tel" id="Telefono" name="Telefono" pattern="[0-9]{10}" maxlength="10" placeholder="Número de Teléfono" required>
             <label for="tipo_documento">Tipo de Documento:</label>
-            <select name="tipo_documento" id="tipo_documento" required>
+            <select name="Tipo_documento" id="tipo_documento" required>
                 <option value="">Selecciona una opción</option>
                 <option value="CC">Cédula de Ciudadanía</option>
                 <option value="TI">Tarjeta de Identidad</option>
@@ -32,7 +32,7 @@
             <input type="text" id="Numero_documento" name="Numero_documento" placeholder="Número de documento" required>
             
             <label for="sexo">Sexo</label>
-            <select name="sexo" id="sexo" required>
+            <select name="Sexo" id="sexo" required>
                 <option value="" disabled selected>Selecciona una opción</option>
                 <option value="Masculino">Masculino</option>
                 <option value="Femenino">Femenino</option>
