--- a/registro.html
+++ b/registro.html
@@ -47,5 +47,6 @@
         </form>
         <button onclick="window.location.href='Inicio.html'">Regresar</button>
     </div>
+    <script src="js/validaciones.js"></script>
 </body>
 </html>
