--- a/registro.html
+++ b/registro.html
@@ -14,7 +14,8 @@
     <!-- en este bloque inicia el formuario -->
 
     <div class="login-container">
-        <form action="php/registro_personas.php" method="POST">
+
+        <form action="php/registro_personas.php" method="POST"><!-- con esta linea de codigo se llama a la logica del php-->
             <h3>Registro de personas</h3> 
              <label for="tipo_documento">Tipo de Documento:</label>
             <select name="Tipo_documento" id="tipo_documento" required>
@@ -51,7 +52,7 @@
     </div>
 
     <!-- con esta  linea de codigo se llama las validaciones de js-->
-     
+
     <script src="js/validaciones.js"></script>
 </body>
 </html>
