--- a/SobreNosotros.html
+++ b/SobreNosotros.html
@@ -15,7 +15,8 @@
 
     <div class="texto_pagina">
         <h1 >HISTORIA</h1>
-        <p >Somos una barbería que inició sus labores en el año 2014....esta es una prueba nueva
+        <p >Somos una barbería que inició sus labores en el año 2014....esta es una prueba nueva 
+            para ver si elgit actualiza
         </p>
     </div>
 </body>
