--- a/Clientes.html
+++ b/Clientes.html
@@ -1,27 +1,125 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-    <meta charset="UTF-8">
-    <title>Software Barbería</title>
-    <link rel="stylesheet" href="css/estilos.css">
-
+  <meta charset="UTF-8">
+  <title>Clientes - Software Barbería</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  
+  <!-- Font Awesome (íconos) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  
+  <!-- Estilos personalizados -->
+  <link rel="stylesheet" href="css/estilos.css">
 </head>
 
-<body class="SobreNosotros">
-    <div class="menu">
-        <button class="menu-btn" onclick="window.location.href='inicio.html'">Inicio</button>
+<body class="bg-light">
+
+  <!-- Barra de navegación -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="inicio.html">Desert Eagle VIP</a>
+    </div>
+  </nav>
+
+  <!-- Contenido principal -->
+  <main class="container py-5">
+    <div class="text-center mb-5">
+      <h1 class="display-5 text-primary">Bienvenido a la página de clientes</h1>
     </div>
 
-    <div class="texto_pagina">
-        <h1 >Bienvenido a lapagina de clientes</h1>
+    <!-- Tabla de precios -->
+    <div class="card p-4 shadow-sm mb-5">
+      <h2 class="text-center mb-4">Tarifas de Servicios</h2>
+      <table class="table table-bordered text-center">
+        <thead class="table-dark">
+          <tr>
+            <th>Servicio</th>
+            <th>Precio</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>Corte de cabello</td>
+            <td>$20.000</td>
+          </tr>
+          <tr>
+            <td>Afeitado de barba</td>
+            <td>$10.000</td>
+          </tr>
+          <tr>
+            <td>Corte + Barba</td>
+            <td>$25.000</td>
+          </tr>
+          <tr>
+            <td>Tinte</td>
+            <td>$25.000</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
-    <div class="menu">
-        <button class="menu-btn" onclick="toggleMenu()">Menú</button>
-        <div class="menu-content" id="menuContent">
-            <a href="">Servicios</a>
-            </div>
-            <button class="menu-btn" onclick="window.location.href='inicio.html'">Inicio</button>
-    <script src="validaciones.js"></script> <!-- Conectar con JavaScript -->
+
+    <!-- Formulario de Agenda -->
+    <div class="card p-4 shadow-sm mb-5">
+      <h2 class="text-center mb-4">Agendar un turno</h2>
+      <form id="agendaForm" action="php/registrar_cita.php" method="POST">
+
+        <div class="mb-3">
+          <label for="servicio" class="form-label">Servicio:</label>
+          <select class="form-select" id="servicio" name="servicio" required>
+            <option value="" disabled selected>Selecciona un servicio</option>
+            <option value="corte">Corte de cabello</option>
+            <option value="barba">Afeitado de barba</option>
+            <option value="combo">Corte + Barba</option>
+            <option value="tinte">Tinte</option>
+          </select>
+        </div>
+
+        <div class="mb-3">
+          <label for="barbero" class="form-label">Barbero:</label>
+          <select class="form-select" id="barbero" name="barbero" required>
+            <option value="" disabled selected>Selecciona un barbero</option>
+            <option value="andres">Andrés</option>
+            <option value="david">David</option>
+            <option value="julian">Julián</option>
+          </select>
+        </div>
+
+        <div class="mb-3">
+          <label for="fecha" class="form-label">Fecha:</label>
+          <input type="date" class="form-control" id="fecha" name="fecha" required>
+        </div>
+
+        <div class="mb-3">
+          <label for="hora" class="form-label">Hora:</label>
+          <input type="time" class="form-control" id="hora" name="hora" required>
+        </div>
+
+        <div class="text-center">
+          <button type="submit" class="btn btn-success">
+            <i class="fa-solid fa-calendar-check"></i> Reservar turno
+          </button>
+        </div>
+
+      </form>
+    </div>
+
+    <div class="text-center">
+      <a href="inicio.html" class="btn btn-primary">Volver al Inicio</a>
+    </div>
+  </main>
+
+  <!-- Pie de página -->
+  <footer class="bg-dark text-white text-center py-3 mt-auto">
+    <div class="container">
+      &copy; 2025 Desert Eagle VIP Barbería. Todos los derechos reservados.
+    </div>
+  </footer>
+
+  <!-- JS Bootstrap + validaciones -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="validaciones.js"></script>
 </body>
 </html>
