--- a/SobreNosotros.html
+++ b/SobreNosotros.html
@@ -1,23 +1,111 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
-    <meta charset="UTF-8">
-    <title>Software Barbería</title>
-    <link rel="stylesheet" href="css/estilos.css">
-
+  <meta charset="UTF-8">
+  <title>Información Interna - Barbería</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
-<body class="SobreNosotros">
-    <div class="menu">
-        <button class="menu-btn" onclick="window.location.href='inicio.html'">Inicio</button>
+<body class="bg-light">
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">Desert Eagle VIP</a>
+      <button class="btn btn-outline-light ms-auto" onclick="window.location.href='Empleados.html'">Volver</button>
     </div>
+  </nav>
 
-    <div class="texto_pagina">
-        <h1 >HISTORIA</h1>
-        <p >Somos una barbería que inició sus labores en el año 2014....esta es una prueba nueva 
-            para ver si elgit actualiza
-        </p>
+  <div class="container py-5">
+    <h1 class="mb-4 text-primary text-center">Información Interna</h1>
+
+    <div class="accordion" id="infoInterna">
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="heading1">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapse1">
+            Políticas de Atención al Cliente
+          </button>
+        </h2>
+        <div id="collapse1" class="accordion-collapse collapse show">
+          <div class="accordion-body">
+            Los empleados deben saludar cordialmente, ofrecer bebidas si están disponibles y asegurarse de entender bien el servicio requerido antes de iniciar.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="heading2">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse2">
+            Horarios y Turnos de Barberos
+          </button>
+        </h2>
+        <div id="collapse2" class="accordion-collapse collapse">
+          <div class="accordion-body">
+            <ul>
+              <li><strong>Andrés:</strong> Lunes a Viernes 9:00 AM – 6:00 PM</li>
+              <li><strong>Julián:</strong> Martes a Sábado 10:00 AM – 7:00 PM</li>
+              <li><strong>David:</strong> Miércoles a Domingo 11:00 AM – 8:00 PM</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="heading3">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse3">
+            Normas de Higiene y Presentación
+          </button>
+        </h2>
+        <div id="collapse3" class="accordion-collapse collapse">
+          <div class="accordion-body">
+            Uso obligatorio de guantes y tapabocas en ciertos servicios, uniforme limpio, manos lavadas antes y después de cada cliente.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="heading4">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse4">
+            Protocolos de Seguridad
+          </button>
+        </h2>
+        <div id="collapse4" class="accordion-collapse collapse">
+          <div class="accordion-body">
+            En caso de accidente, informar de inmediato al encargado. Mantener las herramientas desinfectadas y ordenadas. Revisar extintores y salidas de emergencia semanalmente.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header" id="heading5">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse5">
+            Recursos y Documentos Internos
+          </button>
+        </h2>
+        <div id="collapse5" class="accordion-collapse collapse">
+          <div class="accordion-body">
+            <ul>
+              <li><a href="docs/manual_higiene.pdf" target="_blank">Manual de Higiene</a></li>
+              <li><a href="docs/formato_turnos.pdf" target="_blank">Formato Asignación de Turnos</a></li>
+              <li><a href="docs/contacto_admin.pdf" target="_blank">Contacto del Administrador</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
     </div>
+  </div>
+
+  <!-- Footer -->
+  <footer class="bg-dark text-white text-center py-3 mt-5">
+    <div class="container">
+      &copy; 2025 Desert Eagle VIP Barbería - Uso interno exclusivo
+    </div>
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
