--- a/inicio.html
+++ b/inicio.html
@@ -4,33 +4,108 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>inicio</title>
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/iniciosesion.css">
+    <link rel="stylesheet" href="css/inicio.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-
 <body class="inicio">
-<div class="logo">
-    <img src="img/logobarberia.jpg" alt="">
-</div>
-<div class="login">
-    <h2>Iniciar Sesión</h2>
-    <form id="loginForm">
-        <input type="text" id="username" placeholder="Usuario" required>
-        <input type="password" id="password" placeholder="Contraseña" required>
-        <p class="error" id="errorMsg"></p>
-        <button onclick="window.location.href=''">Ingresar</button>
-        <!--enlace para recuperar contraseña-->
-        <p><a href="recuperar.html" class="recuperar-link">¿Olvidaste tu contraseña?</a></p>
-    </form>
-</div>
-<div class="menu">
-    <button class="menu-btn" onclick="toggleMenu()">Menú</button>
-    <div class="menu-content" id="menuContent">
-        <a href="SobreNosotros.html">Sobre Nosotros</a>
-        <a href="OtrasPaginas.html">Otras Paginas</a>
+<div class="inicio-panel">
+    <div class="logo">
+        <img src="img/logobarberia.jpg" alt="Logo Barbería">
     </div>
-    <button class="menu-btn" onclick="window.location.href='registro.html'">Registrarse</button>
+    <div class="inicio-form-container">
+        <form class="inicio-form" id="loginForm" method="POST" action="php/login.php" autocomplete="off">
+            <h2>Iniciar Sesión</h2>
+            <div class="input-group">
+                <label for="username">Correo o Documento:</label>
+                <span class="campo-icono"><i class="fa-solid fa-user"></i></span>
+                <input type="text" id="username" name="username" placeholder="Correo o Documento" required style="padding-left:32px;">
+                <span class="campo-ayuda">Ingresa tu correo electrónico o número de documento.</span>
+            </div>
+            <div class="input-group">
+                <label for="password">Contraseña:</label>
+                <span class="campo-icono"><i class="fa-solid fa-lock"></i></span>
+                <input type="password" id="password" name="password" placeholder="Contraseña" required style="padding-left:32px;">
+                <span class="campo-ayuda">Obligatorio</span>
+            </div>
+            <button type="submit"><i class="fa-solid fa-arrow-right-to-bracket"></i> Ingresar</button>
+            <div class="mensaje-login" id="mensajeLogin"></div>
+            <p style="text-align:center; margin-top:10px;"><a href="recuperar.html" class="recuperar-link">¿Olvidaste tu contraseña?</a></p>
+            <p style="text-align:center; margin-top:6px;"><a href="registro.html" class="registrarse-link"><i class="fa-solid fa-user-plus"></i> Registrarse</a></p>
+        </form>
+    </div>
 </div>
-<script src="validaciones.js"></script> <!-- Conectar con JavaScript -->
-</body>
+<script>
+// Feedback visual y mensajes de error personalizados para login
+const loginForm = document.getElementById('loginForm');
+const mensajeLogin = document.getElementById('mensajeLogin');
+function mostrarErrorLogin(campo, mensaje) {
+    const el = document.getElementById(campo);
+    if (el) {
+        el.classList.add('error-campo');
+        el.focus();
+    }
+    mensajeLogin.textContent = mensaje;
+}
+function limpiarErroresLogin() {
+    document.querySelectorAll('.error-campo').forEach(e => e.classList.remove('error-campo'));
+    mensajeLogin.textContent = '';
+}
+window.addEventListener('DOMContentLoaded', function() {
+    const params = new URLSearchParams(window.location.search);
+    if (params.get('error') === 'login') {
+        mostrarErrorLogin('username', 'Usuario o contraseña incorrectos.');
+        mostrarErrorLogin('password', '');
+        mostrarModalError('Usuario o contraseña incorrectos.');
+    } else if (params.get('error')) {
+        mostrarModalError(params.get('error'));
+    }
+});
 
+function mostrarModalError(mensaje) {
+    let modal = document.createElement('div');
+    modal.id = 'modalErrorLogin';
+    modal.style.position = 'fixed';
+    modal.style.top = '0';
+    modal.style.left = '0';
+    modal.style.width = '100vw';
+    modal.style.height = '100vh';
+    modal.style.background = 'rgba(0,0,0,0.5)';
+    modal.style.display = 'flex';
+    modal.style.alignItems = 'center';
+    modal.style.justifyContent = 'center';
+    modal.style.zIndex = '9999';
+    modal.innerHTML = `
+        <div style="background:#fff;padding:30px 40px;border-radius:10px;box-shadow:0 2px 10px #0003;text-align:center;max-width:90vw;">
+            <h3 style="color:#c00;margin-bottom:10px;">Error de inicio de sesión</h3>
+            <p style="margin-bottom:20px;">${mensaje}</p>
+            <button onclick="document.getElementById('modalErrorLogin').remove()" style="padding:8px 20px;background:#c00;color:#fff;border:none;border-radius:5px;cursor:pointer;">Cerrar</button>
+        </div>
+    `;
+    document.body.appendChild(modal);
+}
+loginForm.onsubmit = function(e) {
+    limpiarErroresLogin();
+    let valid = true;
+    const usuario = document.getElementById('username');
+    const pass = document.getElementById('password');
+    if (!usuario.value.trim()) {
+        usuario.classList.add('error-campo');
+        valid = false;
+    }
+    if (!pass.value.trim()) {
+        pass.classList.add('error-campo');
+        valid = false;
+    }
+    if (!valid) {
+        mensajeLogin.textContent = 'Por favor completa ambos campos.';
+        e.preventDefault();
+    }
+};
+</script>
+<script src="validaciones.js"></script>
+<!-- JS de Bootstrap -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
