--- a/recuperar.html
+++ b/recuperar.html
@@ -1,21 +1,48 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Recuperar Contraseña - Desert Eagle VIP</title>
-    <link rel="stylesheet" href="css/estilos.css">
+  <meta charset="UTF-8">
+  <title>Recuperar Contraseña - Desert Eagle VIP</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <!-- Estilos personalizados -->
+  <link rel="stylesheet" href="css/estilos.css">
 </head>
-<body class="login">
-    <div class="recovery-container">
-  <div class="recovery-form">
-    <h2>Recuperar Contraseña</h2>
+<body class="bg-dark text-white d-flex align-items-center justify-content-center" style="min-height: 100vh;">
+
+  <div class="card p-5 shadow-lg" style="max-width: 400px; width: 100%;">
+    <div class="text-center mb-4">
+      <i class="fa-solid fa-key fa-2x text-primary mb-2"></i>
+      <h3 class="text-primary">Recuperar Contraseña</h3>
+      <p class="text-muted">Te enviaremos un enlace a tu correo.</p>
+    </div>
+
     <form id="recoveryForm">
-      <input type="email" placeholder="Tu correo electrónico" required>
-      <button type="submit">Enviar enlace</button>
+      <div class="mb-3">
+        <label for="email" class="form-label">Correo electrónico:</label>
+        <input type="email" class="form-control" id="email" placeholder="ejemplo@correo.com" required>
+      </div>
+
+      <div class="d-grid">
+        <button type="submit" class="btn btn-success">
+          <i class="fa-solid fa-paper-plane"></i> Enviar enlace
+        </button>
+      </div>
     </form>
-    <a href="inicio.html" class="back-link">Volver al inicio</a>
+
+    <div class="text-center mt-4">
+      <a href="inicio.html" class="text-decoration-none">
+        <i class="fa-solid fa-arrow-left"></i> Volver al inicio
+      </a>
+    </div>
   </div>
-</div>
-     <script src="validaciones.js"></script> <!-- Conectar con JavaScript -->
+
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="validaciones.js"></script>
 </body>
 </html>
