Actualización total del proyecto con nuevos cambios

--- a/registro_cliente.html
+++ b/registro_cliente.html
@@ -86,7 +86,7 @@
 
             <div class="d-grid gap-2">
               <button type="submit" class="btn btn-success">Registrarse</button>
-              <a href="inicio.html" class="btn btn-secondary">Regresar</a>
+              <a href="Empleados.html" class="btn btn-secondary">Regresar</a>
             </div>
           </form>
 
