--- a/Empleados.html
+++ b/Empleados.html
@@ -2,14 +2,15 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Panel de Empleados - Barbería</title>
-  <!-- Bootstrap CSS -->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Bootstrap CSS + FontAwesome -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="css/estilos.css">
 </head>
 
-<body class="SobreNosotros bg-light">
+<body class="bg-light">
 
   <!-- Barra superior -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -19,6 +20,7 @@
     </div>
   </nav>
 
+  <!-- Contenido -->
   <main class="container py-5">
     <h1 class="text-center text-primary mb-5">Bienvenido a la página de empleados</h1>
 
@@ -26,8 +28,8 @@
 
       <!-- Ver agenda -->
       <div class="col-md-6 col-lg-4">
-        <div class="card h-100 shadow-sm">
-          <div class="card-body text-center">
+        <div class="card h-100 shadow-sm text-center">
+          <div class="card-body">
             <i class="fa-solid fa-calendar-day fa-2x mb-3 text-info"></i>
             <h5 class="card-title">Ver agenda</h5>
             <p class="card-text">Consulta las citas agendadas del día o semana.</p>
@@ -38,11 +40,11 @@
 
       <!-- Asignar turno -->
       <div class="col-md-6 col-lg-4">
-        <div class="card h-100 shadow-sm">
-          <div class="card-body text-center">
+        <div class="card h-100 shadow-sm text-center">
+          <div class="card-body">
             <i class="fa-solid fa-user-clock fa-2x mb-3 text-warning"></i>
             <h5 class="card-title">Asignar turno</h5>
-            <p class="card-text">Registra un nuevo turno para un cliente desde aquí.</p>
+            <p class="card-text">Registra un nuevo turno para un cliente.</p>
             <a href="registro_turno.html" class="btn btn-outline-warning">Asignar</a>
           </div>
         </div>
@@ -50,8 +52,8 @@
 
       <!-- Registrar cliente -->
       <div class="col-md-6 col-lg-4">
-        <div class="card h-100 shadow-sm">
-          <div class="card-body text-center">
+        <div class="card h-100 shadow-sm text-center">
+          <div class="card-body">
             <i class="fa-solid fa-user-plus fa-2x mb-3 text-success"></i>
             <h5 class="card-title">Registrar cliente</h5>
             <p class="card-text">Agrega un nuevo cliente a la base de datos.</p>
@@ -62,8 +64,8 @@
 
       <!-- Editar citas -->
       <div class="col-md-6 col-lg-4">
-        <div class="card h-100 shadow-sm">
-          <div class="card-body text-center">
+        <div class="card h-100 shadow-sm text-center">
+          <div class="card-body">
             <i class="fa-solid fa-pen-to-square fa-2x mb-3 text-secondary"></i>
             <h5 class="card-title">Editar/Eliminar citas</h5>
             <p class="card-text">Gestiona o modifica los turnos existentes.</p>
@@ -74,12 +76,36 @@
 
       <!-- Información interna -->
       <div class="col-md-6 col-lg-4">
-        <div class="card h-100 shadow-sm">
-          <div class="card-body text-center">
+        <div class="card h-100 shadow-sm text-center">
+          <div class="card-body">
             <i class="fa-solid fa-info-circle fa-2x mb-3 text-dark"></i>
             <h5 class="card-title">Información interna</h5>
-            <p class="card-text">Accede a recursos internos o documentos.</p>
+            <p class="card-text">Recursos internos y documentos.</p>
             <a href="SobreNosotros.html" class="btn btn-outline-dark">Ver info</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Registrar empleado -->
+      <div class="col-md-6 col-lg-4">
+        <div class="card h-100 shadow-sm text-center">
+          <div class="card-body">
+            <i class="fa-solid fa-id-badge fa-2x mb-3 text-primary"></i>
+            <h5 class="card-title">Registrar empleado</h5>
+            <p class="card-text">Agregar un nuevo barbero al sistema.</p>
+            <a href="registro_empleado.html" class="btn btn-outline-primary">Registrar</a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Ver empleados -->
+      <div class="col-md-6 col-lg-4">
+        <div class="card h-100 shadow-sm text-center">
+          <div class="card-body">
+            <i class="fa-solid fa-users-viewfinder fa-2x mb-3 text-danger"></i>
+            <h5 class="card-title">Empleados registrados</h5>
+            <p class="card-text">Consulta y gestiona la información de tus empleados.</p>
+            <a href="listar_empleados.html" class="btn btn-outline-danger">Ver empleados</a>
           </div>
         </div>
       </div>
@@ -93,7 +119,7 @@
     </div>
   </footer>
 
-  <!-- Font Awesome + Bootstrap JS -->
+  <!-- JS -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
